# EZR

./: .gitignore  CMakeLists.txt  README.md  build_dependencies.bat
Assets/Models/: Ghost-Pivots.fbx  Ghost-Tris-new-new.fbx  Ghost-Tris-new.fbx  Ghost-Tris.fbx  Ghost.fbx  GingerbreadHouse.fbx  Knusperhaus.fbx  Schneemann.fbx  Snowman.fbx  Snowman_textureTree.fbx  Stone1.fbx  Stone2.fbx  Stone3.fbx  Stone4.fbx  Tree-brown.fbx  Tree-gold.fbx  Tree-green.fbx  Tree-nacked.fbx  Tree-olive.fbx  Tree1_leaves.fbx  Tree1_nacked.fbx
Assets/Relevant-Textures/: Knusperhaus.fbx
Assets/Shader/: Basic.frag  Basic.vert  BasicTextured.frag  DrawFBO.frag  DrawFBO.vert  GBuffer.frag  GBuffer.vert  Gooch.frag  Gooch.vert  Hatching.frag  JGlow.frag  JGlow.vert  JToon.frag  JToon.vert  OilPainting.frag  OilPainting.vert  Outline.frag  Outline.vert  PBR.frag  PBR.vert  Patterns.frag  Patterns.vert  RimLighting.frag  RimLighting.vert  Stippling.frag  Stippling.vert  StipplingNew.frag  Toon.frag  Toon.vert  Watercolor.frag  Watercolor.vert
Assets/Shader/Clouds/: CloudPostProcessing.comp  Clouds.comp  PerlinWorleyNoise.comp  WeatherNoise.comp  WorleyNoise.comp
Assets/Shader/Terrain/: Atmosphere.comp  FrustumCulling.comp  NodeCount.comp  RenderCommon.comp  RenderPass.comp  RenderUpdate.comp  TerrainBatcher.comp  TerrainMerge.comp  TerrainSplit.comp  TopView.comp  cbt.comp
Include/Engine/: Camera.h  ConcurrentBinaryTree.h  Defs.h  Drawable.h  FBO.h  LongestEdgeBisection.h  Mesh.h  Model.h  ModelLoader.h  ParallelFor.h  Profiler.h  ProfilerTask.h  Scene.h  Shader.h  ShaderProgram.h  State.h  Texture.h  cbt.h
Include/Objects/: Clouds.h  ColorfullTriangle.h  Ghost.h  GingerbreadHouse.h  Quad.h  RockAndStone.h  ScreenFillingQuad.h  Snowman.h  Stone1.h  Stone2.h  Stone3.h  Stone4.h  Terrain.h  TreeBrown.h  TreeGold.h  TreeGreen.h  TreeLeaves.h  TreeOlive.h  TreePlain.h  Triangle.h
Source/: main.cpp
Source/Engine/: Camera.cpp  ConcurrentBinaryTree.cpp  Drawable.cpp  FBO.cpp  LongestEdgeBisection.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  State.cpp  Texture.cpp
Source/Objects/: Clouds.cpp  ColorfullTriangle.cpp  Ghost.cpp  GingerbreadHouse.cpp  Quad.cpp  RockAndStone.cpp  ScreenFillingQuad.cpp  Snowman.cpp  Stone1.cpp  Stone2.cpp  Stone3.cpp  Stone4.cpp  Terrain.cpp  TreeBrown.cpp  TreeGold.cpp  TreeGreen.cpp  TreeLeaves.cpp  TreeOlive.cpp  TreePlain.cpp  Triangle.cpp
cmake/: FindAssimp.cmake  FindGLFW3.cmake
